dev/tests/cases/neg/51_arg_type_num_to_str.tv
df greet(name: str) -> void { echo!(name); }
df main() -> void {
    greet(42);
}
